# farmershub-visualization

./: .gitignore  README.md  app.py  app_bootstrap.py  app_bootstrap_layout.py  app_bootstrap_ref.py  app_ref.py  app_test.py  pyproject.toml  requirements.txt  setup.cfg
assets/: custom.css  custom.scss  header.css  style.css  style_ref.css  typography.css
component/: __init__.py  navbar.py
src/: __init__.py  timeseries.py
