[metadata]
name = dashboard-etl
version = 1.0.0
author = Abdullah Reza
author_email = air.reza@hotmail.com
url = https://github.com/rezaabdullah/dashboard-etl
description = ETL project for Google Data Studio Dashboard
long_description = file: README.md
long_description_content_type = text/markdown
keywords = etl, setuptools, data visualization, analytics, dashboard
license = Apache License 2.0
license_files = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
project_urls =
    Documentation = https://github.com/rezaabdullah/dashboard-etl/wiki
    Bug Tracker = https://github.com/rezaabdullah/dashboard-etl/issues
    Source Code = https://github.com/rezaabdullah/dashboard-etl

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.8
packages = find:
# setup_requires =
#     wheel
install_requires =
    dash >= 2.5.0
    pandas >= 1.4.3

# [options.entry_points]
# console_scripts = 
#     etl = etl.__main__:main

[options.extras_require]
interactive =
    jupyter >= 1.0.0
dev =
    flake8 >= 4.0.1
    black >= 22.3.0